--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Inicio cien vistas</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gothic+A1&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yuji+Syuku&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,5 +28,34 @@
             </div>
         </nav>
     </header>
+    <div class="title">
+        <div lang="ja" class="bigtitle">名所江戸百景</div>
+        <div>CIEN FAMOSAS VISTAS DE EDO</div>
+    </div>
+    <div class="background">
+        <div class="container">
+            <div class="text">
+                <p class="subtitle">UTAGAWA HIROSHIGE</p>
+                <p class="greysubtitle">1797-1858</p>
+                <p>Utagawa Hiroshige, seudónimo artístico de Andō Tokutarō, fue un pintor japonés. Perteneció a la Escuela Utagawa, una de las más reputadas del estilo ukiyo-e. Hiroshige fue uno de los principales exponentes del paisajismo japonés, llevando esta disciplina a un nivel artístico y de estilo de gran calidad. Es también conocido como Andō Hiroshige e Ichiyūsai Hiroshige.</p>
+            </div>
+            <img src="Hiroshige_-_Taira_no_Kiyomori_ve_apariciones_sobrenaturales.jpg" alt="Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.">
+            <figcaption>Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.</figcaption>
+        </div>
+        <div class="default_button">
+        <button class="default" type="submit">Ir a Autor</button>
+        </div>
+        <div class="container">
+            <div class="text">
+                <p class="subtitle">LA SERIE</p>
+                <p class="greysubtitle">Sobre “Cien famosas vistas de Edo”</p>
+                <p>Cien famosas vistas de Edo consiste en una serie de grabados realizados por el pintor japonés Utagawa Hiroshige entre 1856 y 1858. A pesar del título de la obra, que indica una cantidad de 100 trabajos, en total se cuentan 119 grabados, confeccionados todos ellos mediante la técnica de la xilografía (grabado en madera). La colección pertenece al estilo ukiyo-e, un género de grabados sobre temas populares destinados a la clase media urbana japonesa que se desarrolló en el Período Edo (1603-1868). Algunas de las estampas fueron finalizadas por su discípulo, Utagawa Hiroshige II, que durante un tiempo usó dicho seudónimo para firmar algunas de sus obras y que además era también hijo adoptivo del maestro.</p>
+                <p>Hiroshige fue un gran paisajista, uno de los mejores de su tiempo, plasmando en imágenes de forma lírica y emotiva los lugares más bellos y renombrados de Japón, especialmente de su capital, Edo —actual Tokio—. En esta serie de obras presentó a los lugares más emblemáticos de la ciudad, recientemente reconstruida tras un devastador terremoto acaecido en 1855. Sin embargo, Hiroshige no mostró los efectos de la destrucción, sino que mostró la urbe de forma idealizada y optimista, pretendiendo infundir a la población un estado de ánimo vitalista y jovial. Al mismo tiempo, la serie ofrecía al público un aspecto de actualidad, de gaceta donde vislumbrar las novedades en la reconstrucción de la ciudad. Las estampas presentan también escenas sociales, ritos y costumbres de la población local, aunando el paisaje con la descripción pormenorizada de personas y ambientes locales de gran diversidad.</p>
+            </div>
+        </div>
+        <div class="default_button">
+        <button class="default" type="submit">Ir a Cien vistas</button>
+        </div>
+    </div>
 </body>
 </html>
