--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio cien vistas</title>
+    <title>Inicio Cien Famosas Vistas de Edo</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
@@ -14,11 +14,11 @@
 </head>
 <body>
     <header class="header">
-        <a href="#" class="logo">CIEN FAMOSAS VISTAS DE EDO</a>
+        <a href="index.html" class="logo">CIEN FAMOSAS VISTAS DE EDO</a>
 
         <nav class="navbar">
             <a href="index.html">Inicio</a>
-            <a href="#">Autor</a>
+            <a href="autor.html">Autor</a>
             <a href="#">Obra</a>
             <div class="search">
                 <form>
@@ -43,7 +43,7 @@
             <figcaption>Taira no Kiyomori ve apariciones sobrenaturales (1840), tríptico en formato ōban, editorial Ibaya Kyūbei.</figcaption>
         </div>
         <div class="default_button">
-        <button class="default" type="submit">Ir a Autor</button>
+        <button class="default" type="submit" onclick="location.href='autor.html'">Ir a Autor</button>
         </div>
         <div class="container">
             <div class="text">
@@ -57,5 +57,11 @@
         <button class="default" type="submit">Ir a Cien vistas</button>
         </div>
     </div>
+
+    <footer>
+        <div class="footer-content">
+            <p>Proyecto Diseño desde el código</p>
+        </div>
+    </footer>
 </body>
 </html>
