--- a/autor.html
+++ b/autor.html
@@ -18,7 +18,7 @@
         <nav class="navbar">
             <a href="index.html">Inicio</a>
             <a href="autor.html">Autor</a>
-            <a href="#">Obra</a>
+            <a href="cienvistas.html">Obra</a>
             <div class="search">
                 <form>
                     <input type="text" placeholder="Buscar...">
@@ -31,7 +31,7 @@
 
         <div class="container">
             <div class="text">
-                <p class="subtitle">UTAGAWA HIROSHIGE</p>
+                <p class="bigsubtitle">UTAGAWA HIROSHIGE</p>
                 <p class="greysubtitle">1797-1858</p>
                 <p>Utagawa Hiroshige, seudónimo artístico de Andō Tokutarō (Edo, actual Tokio,
                     1797-ibídem, 1858), fue un pintor japonés. Perteneció a la Escuela Utagawa, una de
@@ -60,8 +60,10 @@
                     tuvo una influencia determinante sobre movimientos como el impresionismo y el
                     modernismo.</p>
             </div>
-            <img src="Memorial_Portrait_of_Hiroshige,_by_Kunisada.jpg" alt="Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.">
-            <figcaption>Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.</figcaption>
+            <div class="verticalimage">
+                <img src="Memorial_Portrait_of_Hiroshige,_by_Kunisada.jpg" alt="Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.">
+                <figcaption>Retrato póstumo a la memoria de Hiroshige (1858), de Utagawa Kunisada.</figcaption>
+            </div>
         </div>
 
         <div class="container">
@@ -83,8 +85,10 @@
                     cola de huesos, sobre las que se coloca el papel, que posteriormente
                     es rociado con polvo de mica.</p>
             </div>
-            <img src="Cherry-Blossom-Utagawa-Hiroshige-36-Views-of-Mount_Fuji-Series-7.jpg" alt="El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.">
-            <figcaption>El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.</figcaption>
+            <div class="verticalimage">
+                <img src="Cherry-Blossom-Utagawa-Hiroshige-36-Views-of-Mount_Fuji-Series-7.jpg" alt="El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.">
+                <figcaption>El dique de Sumida en la capital oriental (Tôto Sumida-zutsumi). De la serie treinta y seis vistas del monte Fuji.</figcaption>
+            </div>
             <div class="text">
                 <p class="greysubtitle"></p>
                 <p>Hiroshige se encargaba de hacer los dibujos y bocetos para la
@@ -104,5 +108,11 @@
         <div class="default_button">
         <button class="default" type="submit" onclick="location.href='ukiyoe.html'">Ir a Ukiyo-e</button>
         </div>
+    </div>
+    <footer>
+        <div class="footer-content">
+            <p>Proyecto Diseño desde el código</p>
+        </div>
+    </footer>
 </body>
 </html>
