--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="index.html">Inicio</a>
             <a href="autor.html">Autor</a>
-            <a href="#">Obra</a>
+            <a href="cienvistas.html">Obra</a>
             <div class="search">
                 <form>
                     <input type="text" placeholder="Buscar...">
@@ -54,7 +54,7 @@
             </div>
         </div>
         <div class="default_button">
-        <button class="default" type="submit">Ir a Cien vistas</button>
+        <button class="default" type="submit" onclick="location.href='cienvistas.html'">Ir a Cien vistas</button>
         </div>
     </div>
 
