--- a/ukiyoe.html
+++ b/ukiyoe.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <a href="index.html">Inicio</a>
             <a href="autor.html">Autor</a>
-            <a href="#">Obra</a>
+            <a href="cienvistas.html">Obra</a>
             <div class="search">
                 <form>
                     <input type="text" placeholder="Buscar...">
@@ -31,7 +31,7 @@
     <div class="background">
         <div class="container">
             <div class="text">
-                <p class="subtitle">UKIYO-E</p>
+                <p class="bigsubtitle">UKIYO-E</p>
                 <p class="greysubtitle">Pinturas del mundo flotante</p>
                 <p>Ukiyo-e (浮世絵) —traducido del japonés, «pinturas del mundo flotante»— o
                     estampa japonesa es un género de grabados realizados mediante xilografía o
