--- a/index.html
+++ b/index.html
@@ -18,15 +18,38 @@
 
         <nav class="navbar">
             <a href="index.html">Inicio</a>
-            <a href="autor.html">Autor</a>
-            <a href="cienvistas.html">Obra</a>
-            <div class="search">
-                <form>
-                    <input type="text" placeholder="Buscar...">
-                    <button type="submit">Buscar</button>
-                </form>
+            <div class="dropdown">
+                <a href="autor.html" class="dropdown-toggle">Autor<i class="fas fa-caret-down"></i></a>
+                <div class="dropdown_menu">
+                    <ul>
+                        <li><a href="autor.html">Utagawa Hiroshige</a></li>
+                        <li><a href="ukiyoe.html">Ukiyo-e</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="dropdown">
+                <a href="cienvistas.html" class="dropdown-toggle">Cien vistas<i class="fas fa-caret-down"></i></a>
+                <div class="dropdown_menu">
+                    <ul>
+                        <li><a href="primavera.html">I. Primavera</a></li>
+                        <li><a href="#">II. Verano</a></li>
+                        <li><a href="#">III. Otoño</a></li>
+                        <li><a href="#">IV. Invierno</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="containersearch">
+                <div class="search_wrap">
+                    <div class="search_box">
+                        <input type="text" class="input" placeholder="buscar...">
+                        <div class="btn btn_common">
+                            <i class="fas fa-search"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </nav>
+
     </header>
     <div class="title">
         <div lang="ja" class="bigtitle">名所江戸百景</div>
@@ -63,5 +86,7 @@
             <p>Proyecto Diseño desde el código</p>
         </div>
     </footer>
+    <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/b99e675b6e.js"></script>
 </body>
 </html>
